# junimo

./: .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  roadmapped.config.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: junimo-demo.ts  junimo.html
docs/reference/: claude-code-file-formats.md
docs/specs/: 2026-07-09-junimo.md  2026-07-15-refonte-ui-v2.md  2026-07-15-ui-v3-polish.md  2026-07-17-opensource-launch.md
docs/tasks/: _meta.yaml
scripts/: gen_assets.py  gen_junimo_preview.ts  gen_tray_icon.ts  make_tray_icon.py
src/: App.tsx  main.ts  main.tsx  mock.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alerts.rs  chat_end.rs  lib.rs  main.rs  mcp_health.rs  panel.rs  shortcut.rs  tray.rs
src-tauri/src/collector/: config.rs  mod.rs  oauth_usage.rs  snapshot.rs  transcripts.rs  windows.rs
src-tauri/tests/fixtures/complete/: .claude.json
src-tauri/tests/fixtures/partial/: .claude.json
src-tauri/tests/fixtures/snapshot_complete/: .claude.json
src-tauri/tests/fixtures/snapshot_complete/.claude/projects/proj-a/: session1.jsonl
src-tauri/tests/fixtures/transcripts/duplicates/.claude/projects/proj-c/: session-original.jsonl  session-resume.jsonl
src-tauri/tests/fixtures/transcripts/malformed/.claude/projects/proj-b/: session1.jsonl
src-tauri/tests/fixtures/transcripts/multi_model/.claude/projects/proj-a/: session1.jsonl
src-tauri/tests/fixtures/transcripts/session_ids/.claude/projects/proj-g/: conv1.jsonl  conv2.jsonl
src-tauri/tests/fixtures/transcripts/since_filter/.claude/projects/proj-e/: session1.jsonl
src-tauri/tests/fixtures/transcripts/unsorted/.claude/projects/proj-f/: file-a.jsonl  file-b.jsonl
src/components/: Account.tsx  Gauges.tsx  Header.tsx  History.tsx  JunimoEditorPage.tsx  JunimoSprite.tsx  Mcps.tsx  Num.tsx  Panel.tsx  Projects.tsx  SettingsFooter.tsx  SettingsForm.tsx  SettingsPage.tsx  Tabs.tsx
src/hooks/: useJunimoMood.ts  useOverlayData.ts
src/junimo/: compose.ts  model.ts
src/theme/: junimo.theme.css  (+1 more)
(+88 files in other folders)
