[package]
name = "junimo"
version = "0.1.0"
description = "Menu bar companion for your Claude account — Stardew Valley-flavored usage dashboard"
authors = ["Florian Faure"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "junimo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
# Client HTTP bloquant minimal pour le ping http/sse du health-check MCP
# (tâche #17). TLS rustls activé par défaut.
ureq = "2"

# macOS uniquement (tâche #34) : ouverture de l'overlay AU-DESSUS des apps en
# plein écran. `tauri-nspanel` sous-classe la NSWindow de l'overlay en NSPanel
# non-activant (le masque NSWindowStyleMaskNonactivatingPanel n'a d'effet que
# sur un NSPanel — impossible sur une NSWindow simple, d'où le swizzle rodé de
# la crate). La branche v2.1 s'appuie sur le MÊME stack objc2 0.6 que Tauri
# (aucun doublon avec le vieux stack objc 0.2 de la branche v2). Crate git-only
# (jamais publiée sur crates.io, aucun tag) : on épingle un `rev` exact pour la
# reproductibilité du build.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }
# Observateur de clic global (repli du blur-close, voir src/panel.rs). Déjà
# présents dans l'arbre de dépendances (via tauri/wry) aux mêmes versions ; les
# déclarer en direct n'ajoute aucun crate au build.
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
block2 = "0.6"
